[package]
name = "PulseTTY"
version = "1.1.0"
edition = "2024"

[[bin]]
name = "pulsetty"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
rustfft = "6.4.1"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "ogg"] }
wasapi = "0.22.0"
