[package]
name = "pulsetty"
version = "1.1.2"
authors = ["MadAvidCoder"]
license = "MIT"
description = "A terminal-based music visualiser (system audio, microphone, or file), featuring multiple render modes."
readme = "README.md"
homepage = "https://github.com/MadAvidCoder/PulseTTY"
repository = "https://github.com/MadAvidCoder/PulseTTY"
keywords = ["cli","audio", "music", "visualizer", "wasapi"]
categories = ["command-line-utilities", "multimedia::audio", "visualization", "os::windows-apis"]
edition = "2024"

[[bin]]
name = "pulsetty"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
rustfft = "6.4.1"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "ogg"] }
wasapi = "0.22.0"
